--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"style="color:white" ><i class="fa fa-user" style="color:white"></i> Profile </a>
                   <div class="dropdown-menu dropdown-menu-right dropdown-cyan" aria-labelledby="navbarDropdownMenuLink-4">
-                      <a class="dropdown-item" href="profil">My Account</a>
+                      <a class="dropdown-item" routerLink='/profil'>My Account</a>
                       <a class="dropdown-item"  href="login" (click)="logout($event)" *ngIf="loggedIn">Sign Out</a>
                   </div>
               </li>
