--- a/src/app/SuperViseur/vets/profil-vet/profil-vet.component.html
+++ b/src/app/SuperViseur/vets/profil-vet/profil-vet.component.html
@@ -136,7 +136,7 @@
           <td style="float: right;">
             <!-- Default unchecked -->
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" (change)="onChange(petowners.id ,$event.target.checked)"class="form-check-input" >
+                <input type="checkbox" ng-checked="petownersd" (change)="onChange(petowners.id ,$event.target.checked)"class="form-check-input" >
                <!-- <label class="custom-control-label" ></label>-->
             </div>
           </td>
