--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,54 @@
 
+sidnavContent{
+  position:absolute;
+  top: 0;
+  left: -300;
+  display:none;
+  width:300px;
+}
+
+/*.mainContent{
+  position: relative;
+  width: 100%;
+  margin-left: 0;
+}*/
+
+/*.footerContent{
+  min-height: (100vh-225px);
+  bottom:0;
+  width:100%;
+  height:50px;
+
+}
+
+.sideNavControl {
+  position: absolute;
+  top: -20px;
+  width: 100px;
+  height: 100px;
+
+}
+
+#style{
+  width: 40px;
+  height: 40px;
+}
+
+
+
+.sidnavContent.show {
+  display: block;
+  left:0;
+  width:300px;
+}
+
+.mainContent.sideNavOpen {
+  margin-left:250px;
+  width: calc(100% - 230px);
+  height: calc(100%-400px);
+}
+
+.content,.footerContent{
+  padding-bottom: 100px;
+}
+*/
