--- a/src/app/SuperViseur/vets/profil-vet/profil-vet.component.css
+++ b/src/app/SuperViseur/vets/profil-vet/profil-vet.component.css
@@ -60,7 +60,7 @@ a{
   overflow-y: auto;
 }
 button{
-  background-color: #4056A1;
+  background-color: darkred;
 }
 a:hover{
   padding-left: 0.5px;
