--- a/src/app/Vet/new-rx/table-treatment/table-treatment.component.html
+++ b/src/app/Vet/new-rx/table-treatment/table-treatment.component.html
@@ -1,1 +1,49 @@
-<p>table-treatment works!</p>
+<table class="table" style="color:#123C69"  >
+  <thead class="table-active">
+    <tr style="font-size:small; font-style:normal">
+      <th scope="col" style="width:16%;">Product</th>
+      <th scope="col" style="width:5%;">Qty</th>
+      <th scope="col">Type</th>
+      <th scope="col">Form</th>
+      <th scope="col">Strength</th>
+      <th scope="col">Size</th>
+      <th scope="col">Refills</th>
+      <th scope="col">Auto Refill</th>
+      <th scope="col">Days of Supply</th>
+      <th scope="col"> Unit Price</th>
+      <th scope="col"> </th>
+    </tr>
+  </thead>
+  <tbody>
+
+    <tr rowspan=2>
+      <th scope="row">2</th>
+      <td >Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+      <td>@fat</td>
+      <td>@fat</td>
+      <td>@fat</td>
+      <td>@fat</td>
+      <td>@fat</td>
+      <td>@fat</td>
+      <td>@fat</td></tr>
+<tr>
+
+
+      tr<td  colspan=3 style="align:center"><input class="form-control" style="display: inline-block;size: 500px;"></td>
+
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+  <tr>
+
+
+
+  </tr>
+</table>
