--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -41,7 +41,7 @@
       <a class="nav-link active"routerLink="/Vets"><span class="fa fa-user-md"style="color:white E;font-size:25px "></span>&nbsp;Manage Vets</a>
     </li>
     <li>
-      <a class="nav-link active"routerLink="/addPharmacy"><span class="fa fa-capsules"style="color:white E;font-size:25px "></span>&nbsp;Pharmacy </a>
+      <a class="nav-link active"routerLink="/Pharmacies"><span class="fa fa-capsules"style="color:white E;font-size:25px "></span>&nbsp;Pharmacy </a>
     </li>
   </ul>
 
