--- a/src/app/Menu/home-page/home-page.component.html
+++ b/src/app/Menu/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<div class="centre">
+<!--<div class="centre">
   <h3 style="font-style: normal;text-align: center; color:#01094E">
     Rx Management Dashboard
   </h3>
@@ -17,6 +17,22 @@
 </div>
 <div class="container">
 
+<!doctype html>
+<html lang="en">
+  <head>
+   </head>
+   <body>
+<app-navbar ></app-navbar>
+<app-menubar></app-menubar>
 
-</div>
+<notifier-container></notifier-container>
 
+<div class="container">
+
+<router-outlet></router-outlet>
+</div>-->
+<!--</div></body>
+</html>
+
+
+</div>-->
