--- a/src/app/SuperViseur/pet-owners/pet-owners.component.html
+++ b/src/app/SuperViseur/pet-owners/pet-owners.component.html
@@ -41,4 +41,19 @@
     </tr>
 </tbody>
 </table>
-<pagination-controls style="text-align: center;color: #123C69;;" (pageChange)="pageChanged($event)"></pagination-controls>
+
+  <!-- <nav aria-label="Page navigation example" style="text-align: center;">-->
+   <ul class="pagination d-flex justify-content-center">
+     <li class="page-item">
+       <button type='button'  class="btn btn-primary"[disabled]="!visible"(click)="pageChanged2()"><<</button>
+
+     </li>
+     <li  class='page-item'*ngFor='let page of numberPage; let i = index'><a class="page-link" [ngStyle]="{'background-color':curentPage === i+1 ? '#007bff' : 'white' }">{{i+1}}</a></li>
+
+     <li class="page-item">
+       <button type='button' class="btn btn-primary"  [disabled]="!show" (click)="pageChanged()">>></button>
+
+     </li>
+   </ul>
+ <!--</nav>-->
+
