--- a/src/app/SuperViseur/pharmacy/add-pharamcy/add-pharamcy.component.html
+++ b/src/app/SuperViseur/pharmacy/add-pharamcy/add-pharamcy.component.html
@@ -1,6 +1,6 @@
 <span class="fa fa-arrow-left" style="color: #123C69; margin-left: 25px;"></span><a routerLink="/HomePage"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" style="color: #123C69; margin-left: 25px;"></span><a routerLink="" >Pharmcies List </a>
+<span class="fa fa-arrow-left" style="color: #123C69; margin-left: 25px;"></span><a routerLink="/Pharmacies" >Pharmcies List </a>
 <div class="containt">
 
   <h2 style="color:#123C69 ; margin-left:28px;"> Add New Pharmcy</h2>
