--- a/src/app/SuperViseur/pharmacy/pharmacies/pharmacies.component.css
+++ b/src/app/SuperViseur/pharmacy/pharmacies/pharmacies.component.css
@@ -6,7 +6,7 @@
 {
   float: right;
   margin-bottom: 10px;
-  background-color: #D79922;
+  background-color: darkred;
   width: 300px;
 }
 a{
@@ -84,21 +84,10 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+pagination-controls{
+  background-color: #4056A1;
+}
 a:hover{
   padding-left: 0.5px;
   left: 0;
 }
-
-/*#nav {
-	padding: 0; margin: 0;
-	text-align: center; /* centrer le texte */
-/*}
-#nav li {
-	display: inline;
-	list-style: none;
-}
-#nav a {
-	display:inline-block;
-/*	margin: 0 30px;*/
-/*}
-*/
