--- a/src/app/SuperViseur/vets/profil-vet/profil-vet.component.html
+++ b/src/app/SuperViseur/vets/profil-vet/profil-vet.component.html
@@ -36,6 +36,51 @@
       <label for="inputAddress"id='labelInput'>Address :</label> &nbsp;&nbsp;<label >{{ adresse.adresse}} <br> {{ adresse.city}}
       &nbsp;{{ adresse.street}}<br>{{ adresse.postal_code}} </label>
   </div>
+  <!-- Button trigger modal -->
+ <button type="button" class="btn btn-primary" style ="background-color: darkred; width: 200px; border-color: darkred;"data-toggle="modal"  data-target="#exampleModalCenter" (click)='AttachPetowner()' >
+  <h6 style="float:left;">Petowners </h6>
+</button>
+
+<!-- Modal -->
+<div class="modal fade bd-example-modal-lg" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLongTitle">Petowners List</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="background-color: aliceblue;">
+      <span aria-hidden="true" style="color:darkgrey;">&times;</span>
+      </button>
+  </div>
+<div class="modal-body">
+
+    <input type="text" class="form-control" name='search'[(ngModel)]='search'style="display: inline; width:300px;margin-right: 15px;" placeholder="Search by Name">
+    <button type="button" class="btn btn-primary" style="display: inline; background-color: #D79922;">Find </button>
+    <button style="display: inline; background-color:darkred;margin-left: 10px;"type="button" class="btn btn-secondary" data-dismiss="modal" >Close</button>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="row"></th>
+          <td scope="row" style="" >Name </td>
+
+
+        </tr>
+      </thead>
+      <tbody  >
+
+        <tr *ngFor="let petowners of CheckPet| filter:search">
+          <th scope="row"></th>
+          <td>{{petowners.name }} {{petowners.last_name}} &nbsp;({{petowners.email}}) </td>
+
+
+        </tr>
+      </tbody>
+    </table>
+</div>
+  <div class="modal-footer">
+  </div>
+  </div>
+</div>
+</div>
 <br>
   <button type="submit" class="btn btn-primary " id="edit"(click)='edit()'style="float:right;font-style:oblique ; margin-bottom :20px ;font-size:large;width: 100px;"> <span class="fas fa-pencil-alt">Edit </span></button>
 <br>
@@ -57,12 +102,12 @@
       </div>
       <div class="form-row">
          <label for="inputEmail" >Email Address <i style="color:red">*</i></label>
-          <input type="text" name="email"[(ngModel)]='user.email' class="form-control" id="inputEmail" value="{{user.email}}" >
+          <input type="email" name="email"[(ngModel)]='user.email' class="form-control" id="inputEmail" value="{{user.email}}" >
       </div>
      <div class="row">
      <div class="col">
          <label for="inputphone" > Mobile Number <i style="color:red">*</i></label>
-         <input type="text" name="phone" id="inputphone" [(ngModel)]='user.phone'class="form-control"value="{{user.phone}}">
+         <input type="phone" name="phone" id="inputphone" [(ngModel)]='user.phone'class="form-control"value="{{user.phone}}">
      </div>
    <div class="col">
         <label for="InputDirectLine" > DirectLine <i style="color:red">*</i></label>
@@ -130,18 +175,30 @@
         </tr>
       </thead>
       <tbody  >
-         <tr *ngFor="let petowners of petowners| filter:search">
+        <tr *ngFor="let petowners of petowners| filter:search">
+          <th scope="row"></th>
+          <td>{{petowners.name }} {{petowners.last_name}} &nbsp;({{petowners.email}}) </td>
+          <td style="float: right;">
+            <!-- Default unchecked -->
+          <div class="custom-control custom-checkbox">
+                <input type="checkbox"(change)="onChange(petowners.id ,$event.target.checked)"class="form-check-input" >
+               <!-- <label class="custom-control-label" ></label>-->
+          </div>
+          </td>
+
+        </tr>
+        <tr *ngFor="let petowners of CheckPet| filter:search">
           <th scope="row"></th>
           <td>{{petowners.name }} {{petowners.last_name}} &nbsp;({{petowners.email}}) </td>
           <td style="float: right;">
             <!-- Default unchecked -->
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" ng-checked="petownersd" (change)="onChange(petowners.id ,$event.target.checked)"class="form-check-input" >
+                <input type="checkbox" checked class="form-check-input" (change)="onChange2(petowners.id ,$event.target.checked)">
                <!-- <label class="custom-control-label" ></label>-->
             </div>
           </td>
-        </tr>
 
+        </tr>
       </tbody>
     </table>
 </div>
