--- a/src/app/SuperViseur/vets/vets.component.html
+++ b/src/app/SuperViseur/vets/vets.component.html
@@ -1,6 +1,6 @@
 
 <span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
-<h2 style="color:#123C69">Vets List </h2>
+<h2 style="color:#123C69">Vets List  </h2>
 <button routerLink="/addVet"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New Vet</button>
 <div class="input-group">
   <input type="text" id='search' class="form-control" [(ngModel)]='search' placeholder="Search by Name">
@@ -25,7 +25,7 @@
   </thead>
   <tbody>
 
-      <tr *ngFor="let users of user| filter:search|orderBy: order|paginate: config" >
+      <tr *ngFor="let users of user| filter:search|orderBy: order" >
        <td>{{users.name |titlecase }}  </td>
         <td>{{users.last_name}}</td>
         <td>{{users.email}}</td>
@@ -40,5 +40,20 @@
     </tr>
 </tbody>
 </table>
-<pagination-controls style="text-align: center;" (pageChange)="pageChanged($event)"></pagination-controls>
+<!--<pagination-controls style="text-align: center;" (click)="pageChanged($event)"></pagination-controls>-->
+ <!-- <nav aria-label="Page navigation example" style="text-align: center;">-->
+  <ul class="pagination d-flex justify-content-center">
+    <li class="page-item">
+      <button type='button'  class="btn btn-primary"[disabled]="!visible"(click)="pageChanged2()"><<</button>
+
+    </li>
+    <li  class='page-item'*ngFor='let page of numberPage; let i = index'><a class="page-link" [ngStyle]="{'background-color':curentPage === i+1 ? '#007bff' : 'white' }">{{i+1}}</a></li>
+
+    <li class="page-item">
+      <button type='button' class="btn btn-primary"  [disabled]="!show" (click)="pageChanged()">>></button>
+
+    </li>
+  </ul>
+<!--</nav>-->
+
 
