--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="mt-4 col-8 offset-2" style="width: 550px  ;"id='hi' >
+<div class="mt-15 col-10 offset-2 d-flex justify-content-center" style="width :600px"   >
   <div class ="card" style="margin-top:150px">
     <img src="assets/img/login2.png"style="width:100%; height:100px"/>
     <div class="card-header"><h3 style="color:#4056A1; font-family: Georgia, 'Times New Roman', Times, serif;"> Vet Login </h3></div>
