--- a/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
+++ b/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
@@ -143,7 +143,7 @@
 <br>
 <br>
 
-     <button type="submit" class="btn btn-primary " (click)="Save()" style="float:right;font-style:oblique ; margin-bottom :20px ;font-size:large;width: 200px; background-color:darkred"> <span class="fa fa-save"  style="margin-right:15px"> Save </span></button>
+     <button type="submit" class="btn btn-primary " (click)="addPetowner()" style="float:right;font-style:oblique ; margin-bottom :20px ;font-size:large;width: 200px; background-color:darkred"> <span class="fa fa-save"  style="margin-right:15px"> Save </span></button>
  <br>
  <br>
   </form>
