--- a/src/app/Vet/new-rx/modal-option/modal-option.component.html
+++ b/src/app/Vet/new-rx/modal-option/modal-option.component.html
@@ -32,5 +32,5 @@
     </table>
 
 
-
+    <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-atom" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
 
