--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,10 +12,10 @@
              <i class="fa fa-bell"></i>-->
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" (click)='notif()'aria-haspopup="true" aria-expanded="false" style="color:white"> <i class="fa fa-bell" style="color:white"> </i>
-                      <span class="badge badge-info" style="background-color :red;">11</span>  </a>
+                      <span class="badge badge-info" style="background-color :red;">{{countNotif}}</span>  </a>
 
                     <div class="dropdown-menu dropdown-menu-right dropdown-cyan" aria-labelledby="navbarDropdownMenuLink-4">
-                        <a class="dropdown-item" href="#"*ngFor="let notif of noti ">{{notif}} </a>
+                        <a class="dropdown-item" href="#"*ngFor="let notif of noti ">{{notif.statusName}} in the {{notif.RxOrderDate}} </a>
                     </div>
 
                 </li>
