--- a/src/app/Menu/home-page/home-page.component.html
+++ b/src/app/Menu/home-page/home-page.component.html
@@ -1,4 +1,8 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<app-navbar  *ngIf="loggedIn"></app-navbar>
+<app-menubar  *ngIf="loggedIn"  ></app-menubar>
+
+<notifier-container></notifier-container>
+
 <!--<div class="centre">
   <h3 style="font-style: normal;text-align: center; color:#01094E">
     Rx Management Dashboard
@@ -36,3 +40,7 @@
 
 
 </div>-->
+
+<div class="container">
+
+</div>
