--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-
-<div class="mt-15 col-10 offset-2 d-flex justify-content-center" style="width :600px"   >
+<!--
+<div class="mt-15 col-10 offset-2 d-flex justify-content-center"    >
   <div class ="card" style="margin-top:150px">
     <img src="assets/img/login2.png"style="width:100%; height:100px"/>
     <div class="card-header"><h3 style="color:#4056A1; font-family: Georgia, 'Times New Roman', Times, serif;"> Vet Login </h3></div>
@@ -22,8 +22,7 @@
             <input type="password"  name="password"class="form-control" id="inputPassword3" placeholder="password" [(ngModel)]="form.password" required>
           </div>
         </div>
-
-     <!---->   <div class="form-group row">
+   <div class="form-group row">
           <div class="col-sm-10">
             <button type="submit" class="btn btn-primary" style="background-color:#4056A1" [disabled]="!loginForm.valid">Sign in
             </button>
@@ -41,4 +40,76 @@
     </div>
   </div>
 </div>
+ -->
+ <section class="section-conten padding-y" style="min-height: 84vh;">
+  <!-- ============================ COMPONENT LOGIN   ================================= -->
+  <div class="card mx-auto" style="max-width: 380px; margin-top: 100px;">
+    <div class="card-body">
+      <h4 class="card-title mb-4"><img src="assets/img/login2.png" style="margin-left: 20%;align-self: center;" /></h4>
+         <form #loginForm=ngForm (ngSubmit)="onSubmit()" >
 
+        <div class="form-group">
+          <input
+            name="email"
+            class="form-control"
+            placeholder="Email"
+            type="text"
+            [(ngModel)]="form.email" required
+          />
+          <div
+            *ngIf=" loginForm.controls.email.errors"
+            class="invalid-feedback d-block"
+          >
+            <div *ngIf="loginForm.controls.email.errors.required">
+              Email is required
+            </div>
+            <div *ngIf="loginForm.controls.email.errors.email">
+              Email n'est pas valide
+            </div>
+          </div>
+        </div>
+        <!-- form-group// -->
+        <div class="form-group">
+          <input
+            name="password"
+            class="form-control"
+            placeholder="Mot de passe"
+            type="password"
+             [(ngModel)]="form.password" required>
+
+          <div
+            *ngIf=" loginForm.controls.password.errors"
+            class="invalid-feedback d-block"
+          >
+            <div *ngIf="loginForm.controls.password.errors.required">
+              Mot des passe est obligé
+            </div>
+            <div *ngIf="loginForm.controls.password.errors.minlength">
+              Mot de passe doit contenir au moin 6 cracteres
+            </div>
+          </div>
+        </div>
+        <!-- form-group// -->
+
+        <div class="form-group">
+          <a routerLink="/reset" class="float-right">Mot de passe Oublié?</a>
+        </div>
+        <!-- form-group form-check .// -->
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.valid">
+            Authentification
+          </button>
+        </div>
+        <!-- form-group// -->
+      </form>
+    </div>
+    <!-- card-body.// -->
+  </div>
+  <!-- card .// -->
+
+  <p class="text-center mt-4">
+    Vous n'avez pas un compte ? <a routerLink="/register">Inscrivez vous</a>
+  </p>
+  <br /><br />
+  <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
+</section>
