--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,3 +52,26 @@ sidnavContent{
   padding-bottom: 100px;
 }
 */
+.left-nav-bar{
+  position: fixed;
+  top: 0px;
+  padding-top: 6px;
+  width: 15vw;
+  height: 100vh;
+  z-index: 100;
+  background: #4056a1;
+}
+
+.page-container{
+  margin-top: 40px;
+  width: 85vw;
+  float:right;
+  padding: 25px;
+}
+.top-nav-bar{
+  position: fixed;
+  top: 0px;
+  width: 100vw;
+  z-index: 99;
+}
+
