--- a/src/app/components/menubar/menubar.component.css
+++ b/src/app/components/menubar/menubar.component.css
@@ -1,28 +1,13 @@
-/* The sidebar menu */
-.sidenav {
-/* height:100%; /* Full-height: remove this if you want "auto" height */
- /* width: 160px; /* Set the width of the sidebar */
- position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0px; /* Stay at the top */
-  left: -300px;
-background-color:#F4F4F4;
-/*background-color:#EAE7DC;*/
-
-
-  /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-  transition: 1s;
+.leftMenu {
+  background: #e2e2e2;
+  height: 100%;
 }
-
-
 /* The navigation menu links */
-.sidenav ul a {
+.leftMenu ul a {
     display: block;
     font-style: oblique;
     line-height: 40px;
-    font-size: 20px;
+    font-size: 14px;
     color: #123C69;
     padding-left: 20px ;
    /* box-sizing: border-box;*/
@@ -31,7 +16,7 @@ background-color:#F4F4F4;
     transition: .4s;
 
 }
-.sidenav ul{
+.leftMenu ul{
   border: 1px solid rgba(255,255,255,.1);
 
 }
