--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -71,12 +71,12 @@
         <!-- form-group// -->
         <div class="form-group">
           <input
-            name="password"
+            name="password
             class="form-control"
             placeholder="Mot de passe"
             type="password"
              [(ngModel)]="form.password" required>
-
+          />
           <div
             *ngIf=" loginForm.controls.password.errors"
             class="invalid-feedback d-block"
