--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -56,15 +56,15 @@ sidnavContent{
   position: fixed;
   top: 0px;
   padding-top: 6px;
-  width: 15vw;
+  width: 20vw;
   height: 100vh;
-  z-index: 100;
-  background: #4056a1;
+  z-index: 999;
+
 }
 
 .page-container{
-  margin-top: 40px;
-  width: 85vw;
+  margin-top: 30px;
+  width: 80vw;
   float:right;
   padding: 25px;
 }
@@ -72,6 +72,50 @@ sidnavContent{
   position: fixed;
   top: 0px;
   width: 100vw;
-  z-index: 99;
+  z-index: 999;
 }
 
+#wrapper {
+  overflow-x: hidden;
+}
+
+#sidebar-wrapper {
+min-height: 100vh;
+margin-left: -15rem;
+-webkit-transition: margin .25s ease-out;
+-moz-transition: margin .25s ease-out;
+-o-transition: margin .25s ease-out;
+transition: margin .25s ease-out;
+}
+
+#sidebar-wrapper .sidebar-heading {
+padding: 0.875rem 1.25rem;
+font-size: 1.2rem;
+}
+
+#sidebar-wrapper .list-group {
+width: 15rem;
+}
+
+#page-content-wrapper {
+min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+margin-left: 0;
+}
+
+@media (min-width: 768px) {
+#sidebar-wrapper {
+  margin-left: 0;
+}
+
+#page-content-wrapper {
+  min-width: 0;
+  width: 100%;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  margin-left: -15rem;
+}
+}
